fixed Home Stay Updated spacing at 320px

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -234,6 +234,7 @@
   .home-contact {
     .stay-updated form {
       flex-direction: column;
+      padding-top: 1rem;
 
       input,
       button {
